# DM_prueba_algoritmos_2

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/patterndb/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  patterndb.cpp  patterndb4_solver.cpp
app/src/main/java/com/example/patterndb/Models/: Puzzle.java
app/src/main/java/com/example/patterndb/NativeSolver/: NativeSolver.java
app/src/main/java/com/example/patterndb/Solver/: PatternDBSolver.java
app/src/main/java/com/example/patterndb/View/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/patterndb/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
